sandc/test/fixtures/astRegression/shouldFail/productions/ifTypeGuardPseudex/EmptyElseIfBody.sand
pub class EmptyElseIfBody {
    foo() {
        let a = if let b = c {
            c
        } else if cond {
            
        } else {
            c
        };
    }
}